@@ -103,20 +103,20 @@ if (($search_request = $_REQUEST['_search']) && isset($_SESSION['search'][$searc
 
     // create resultset object
     $count  = count($records);
-    $first  = ($page-1) * $CONFIG['pagesize'];
+    $first  = ($page-1) * $PAGE_SIZE;
     $result = new rcube_result_set($count, $first);
 
     // get records from the next page to add to the list
-    $pages = ceil((count($records) + $delcnt) / $CONFIG['pagesize']);
+    $pages = ceil((count($records) + $delcnt) / $PAGE_SIZE);
     if ($_GET['_from'] != 'show' && $pages > 1 && $page < $pages) {
         // sort the records
         ksort($records, SORT_LOCALE_STRING);
 
-        $first += $CONFIG['pagesize'];
+        $first += $PAGE_SIZE;
         // create resultset object
         $res = new rcube_result_set($count, $first - $delcnt);
 
-        if ($CONFIG['pagesize'] < $count) {
+        if ($PAGE_SIZE < $count) {
             $records = array_slice($records, $first - $delcnt, $delcnt);
         }
 
@@ -132,7 +132,7 @@ else {
     $result = $CONTACTS->count();
 
     // get records from the next page to add to the list
-    $pages = ceil(($result->count + $delcnt) / $CONFIG['pagesize']);
+    $pages = ceil(($result->count + $delcnt) / $PAGE_SIZE);
     if ($_GET['_from'] != 'show' && $pages > 1 && $page < $pages) {
         $CONTACTS->set_page($page);
         $records = $CONTACTS->list_records(null, -$delcnt);
@@ -140,7 +140,7 @@ else {
 }
 
 // update message count display
-$OUTPUT->set_env('pagecount', ceil($result->count / $CONFIG['pagesize']));
+$OUTPUT->set_env('pagecount', ceil($result->count / $PAGE_SIZE));
 $OUTPUT->command('set_rowcount', rcmail_get_rowcount_text($result));
 
 if (!empty($_SESSION['contact_undo'])) {
